--- a/aoc2023/package.json
+++ b/aoc2023/package.json
@@ -18,7 +18,9 @@
     "aocrunner": "^1.9.6",
     "prettier": "^2.8.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "debug": "^4.3.4"
+  },
   "engines": {
     "node": ">=16.13.0"
   }
