feat: solution for day 9 - part 1

--- a/aoc2023/package.json
+++ b/aoc2023/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "aocrunner day",
+    "dev1": "DEBUG=part1 aocrunner day",
+    "dev2": "DEBUG=part2 aocrunner day",
     "format": "prettier -w src",
     "update:readme": "aocrunner update:readme"
   },
