--- a/aoc2024/package.json
+++ b/aoc2024/package.json
@@ -18,7 +18,9 @@
     "aocrunner": "^1.10.0",
     "prettier": "^2.8.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "engines": {
     "node": ">=16.13.0"
   }
